--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -84,6 +84,7 @@ p {
     visibility: visible;
     opacity: 1;
 }
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -159,7 +160,9 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+.search-engine-optimization,
+.online-reputation-management,
+.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
