--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 :root {
     --defaultwhite: #ffffff;
 }
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -30,7 +31,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -39,15 +40,15 @@ body {
     flex-wrap: flex;
 }
 
-.header div ul {
+nav ul {
     list-style-type: none;
     flex-direction: column;
 }
 
-.header div ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
-    flex-direction: row;
+    place-content: right;
 }
 
 a {
@@ -64,9 +65,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+    background-position: cover;
     position: relative;
 }
 
@@ -107,56 +106,32 @@ p {
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    clear: both;
+    /* clear: both; */
     float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    ;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: var(--defaultwhite);
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: var(--defaultwhite);
-}
-
+.benefit-lead,
+.benefit-brand,
 .benefit-cost {
     margin-bottom: 32px;
     color: var(--defaultwhite);
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
+.benefit-lead h3,
+.benefit-brand h3,
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+.benefit-lead img,
+.benefit-brand img,
 .benefit-cost img {
     display: block;
     margin: 10px auto;
@@ -172,30 +147,19 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: var(--defaultwhite);
+    
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
+
+.search-engine-optimization img,
+.online-reputation-management img,
+.social-media-marketing img{
+    max-width:  300px; ;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+.search-engine-optimization h2,
+.online-reputation-management h2,
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
