--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --defaultwhite: #ffffff;
+    --defautlfont:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 * {
@@ -25,6 +26,7 @@ body {
     display: inline-block;
     font-size: 48px;
     flex-wrap: wrap;
+    flex: content;
 }
 
 .header h1 .seo {
@@ -35,14 +37,16 @@ body {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    font-family: var(--defautlfont);
     font-size: 20px;
-    flex-wrap: flex;
+    background-color: inherit;
+    -ms-flex-item-align: inherit;
 }
 
 nav ul {
     list-style-type: none;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 nav ul li {
@@ -69,24 +73,6 @@ p {
     position: relative;
 }
 
-.hovercap {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px;
-    color: white;
-    background-color: blue;
-    visibility: none;
-    opacity: 0;
-    transition: 0.3s;
-}
-
-.hero :hover.hovercap {
-    visibility: visible;
-    opacity: 1;
-}
-
 .float-left {
     float: left;
     margin-right: 25px;
@@ -109,10 +95,11 @@ p {
     /* clear: both; */
     float: right;
     width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    height: fit-content;
+    font-family: var(--defautlfont);
     background-color: #2589bd;
-    ;
+    flex:content;
+
 }
 
 .benefit-lead,
@@ -144,7 +131,7 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    font-family: var(--defautlfont);
     background-color: #0072bb;
     color: var(--defaultwhite);
     
