--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --defaultwhite: #ffffff;
-    --defautlfont:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    --defautlfont: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 * {
@@ -14,7 +14,7 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -22,18 +22,18 @@ body {
     flex: content;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
     flex-wrap: wrap;
     flex: content;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -69,9 +69,17 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-position: cover;
     position: relative;
+    overflow: hidden;
 }
+
+.hero_image {
+    height: auto;
+    width: 100%;
+    display: block;
+    
+}
+
 
 .float-left {
     float: left;
@@ -83,13 +91,13 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     /* clear: both; */
@@ -97,68 +105,55 @@ p {
     width: 20%;
     height: fit-content;
     font-family: var(--defautlfont);
-    background-color: #2589bd;
-    flex:content;
+    background-color:  #2a607c;
+    flex: content;
 
 }
-
-.benefit-lead,
-.benefit-brand,
-.benefit-cost {
+aside section {
     margin-bottom: 32px;
     color: var(--defaultwhite);
 }
 
-.benefit-lead h3,
-.benefit-brand h3,
-.benefit-cost h3 {
+aside section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-
-.benefit-lead img,
-.benefit-brand img,
-.benefit-cost img {
+aside section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing {
+article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: var(--defautlfont);
     background-color: #0072bb;
     color: var(--defaultwhite);
-    
+
 }
 
 
-.search-engine-optimization img,
-.online-reputation-management img,
-.social-media-marketing img{
-    max-width:  300px; ;
+article img {
+    max-width: 300px;
+    ;
 }
 
 
-.search-engine-optimization h2,
-.online-reputation-management h2,
-.social-media-marketing h2 {
+article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h4 {
     font-size: 20px;
 }
